# ppvijetbankcard

./: .env.example  .flake8  .gitignore  README.md  SECURITY.md  demo.html  logfile.txt  main.py  pyproject.toml  requirements.txt
generators/: __init__.py  generators.py  homework_11_1.txt
home_work_10/: task.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_masks_py.html  z_a44f0ac069e85531_test_processing_py.html  z_a44f0ac069e85531_test_widget_py.html
pre-code/: инструкция_разработки.txt
src/: __init__.py  decorators.py  external_api.py  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_decorators_fixtures.py  test_external_api.py  test_generators.py  test_generators_fixtures.py  test_masks.py  test_masks_fixtures.py  test_processing.py  test_processing_fixtures.py  test_utils.py  test_widget.py  test_widget_fixtures.py
wiki/: FAQ.md  Home.md  Генераторы-данных.md  Декоратор-логирования.md  Обработка-транзакций.md  Основные-функции.md  Разработка.md  Расширенные-возможности.md  Тестирование.md
