[project]
name = "ppvijetbankcard"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikolai Popov",email = "webmiko@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage (>=7.11.0,<8.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[project.scripts]
lint = "flake8 . && mypy . && black . && isort ."
lint-src = "flake8 src && mypy src && black src && isort src"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "isort (>=6.1.0,<=7.0.0)"
]

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
)
'''
[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'